# Roqet

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.api  README.md  SEARCH.md  api.py  deploy.sh  docker-compose.yml  embedder.py  enrich.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements-mcp.txt  requirements.txt  tailwind.config.js  validate.py
app/: globals.css  layout.tsx  page.tsx
data/eval/: nl_queries.jsonl  nl_queries_geocoq.jsonl  premise_selection.jsonl
docs/: BENCHMARKS.md  DATA.md  FINETUNE.md
fixtures/: sample.v
fixtures/seed/hott/theories/Basics/: PathGroupoids.v
fixtures/seed/mathcomp/algebra/: morphism.v
fixtures/seed/mathcomp/ssreflect/: ssrnat.v
fixtures/seed/stdlib/theories/Arith/: PeanoNat.v
fixtures/seed/stdlib/theories/Lists/: List.v
fixtures/seed/stdlib/theories/Logic/: FunctionalExtensionality.v
fixtures/seed/unimath/UniMath/Foundations/: PartA.v
lib/: api.ts
rocqet/: __init__.py  api.py  finetune.py
roqet/: __init__.py  api.py  describe.py  embedder.py  enrich.py  eval.py  extract.py  fetch.py  mcp_server.py  mine_eval.py  schema.py  validate.py
scripts/: build_dataset.sh  build_index.sh  eval_finetune.sh  index_cloud.sh  make_indep_eval.py  nl_ranks.py  train_embed.py
tests/: __init__.py  test_api.py  test_describe.py  test_env_compat.py  test_extract.py  test_schema.py
web/app/: page.tsx
web/lib/: api.ts
